@@ -93,6 +93,7 @@ public class PyGenerator extends PyIterator {
 
     private PyObject raiseException(PyException ex) {
         if (gi_frame == null || gi_frame.f_lasti == 0) {
+            gi_frame = null;
             throw ex;
         }
         gi_frame.setGeneratorInput(ex);
